<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_screen1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntroActivity" >

    <!-- Soung and Language Settings -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal" >

        <com.h2o.extra.SquareButton
            android:id="@+id/soundSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/audio_on" />

        <com.h2o.extra.SquareButton
            android:id="@+id/langSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/eng_icon"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <!-- Game Title -->
    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/game_title"
        android:textColor="@color/red"
        android:textSize="43sp"
        android:typeface="serif"        
        android:gravity="center" />

    <!-- Start / Continue Button -->
    <Button
        android:id="@+id/launchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/start_button"
        android:textSize="40sp" />

    <!-- Top Scores will go here -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="" />
    
    <!-- SR + Credits + Share + Statistics Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
        <com.h2o.extra.SquareButton
        android:id="@+id/sophiesRealmLinkButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/small_sr"
        android:layout_margin="3dp" />
        
        <com.h2o.extra.SquareButton
		android:id="@+id/creditsButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/small_credits"
        android:text="@string/credits"
        android:layout_margin="3dp" />
        
        <com.h2o.extra.SquareButton
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/small_share"
        android:layout_margin="3dp" />
        
        <com.h2o.extra.SquareButton
        android:id="@+id/statisticsButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/small_statistics"
        android:layout_margin="3dp" />
        
    </LinearLayout>

</LinearLayout>